// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FeedNavigation - Snapshots > matches snapshot with custom feed active (showing edit dialog) 1`] = `
<div
  class="overflow-x-auto lg:flex-row"
  data-testid="container"
>
  <div
    class="mb-2 font-light text-muted-foreground lg:hidden"
    data-level="2"
    data-size="lg"
    data-testid="heading"
  >
    Feed
  </div>
  <a
    class="flex min-h-12 w-full min-w-40 items-center gap-x-2 border-b transition-colors hover:text-white lg:justify-center border-border text-muted-foreground"
    data-override-defaults="true"
    data-testid="link"
    href="/home"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-house size-5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
      />
      <path
        d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
      />
    </svg>
    <span
      class="font-medium lg:text-sm"
      data-override-defaults="true"
      data-testid="typography"
    >
      Home
    </span>
  </a>
  <div
    class="group relative flex w-full min-w-40 text-white"
    data-testid="custom-feed-tab"
  >
    <a
      aria-current="page"
      class="flex min-h-12 w-full min-w-40 items-center gap-x-2 border-b pr-12 transition-colors hover:text-white lg:justify-center lg:pl-12 border-white text-white"
      data-override-defaults="true"
      data-testid="link"
      href="/feed/feed-active"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-activity size-5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
        />
      </svg>
      <span
        class="truncate font-medium lg:text-sm"
        data-override-defaults="true"
        data-testid="typography"
      >
        Active Feed
      </span>
    </a>
    <div
      data-feed-id="feed-active"
      data-testid="custom-feed-dialog-edit"
    >
      <button
        aria-label="Edit Active Feed"
        class="absolute top-1/2 right-2 z-10 size-8 -translate-y-1/2 opacity-100 transition-opacity focus-visible:opacity-100 lg:opacity-0 lg:group-focus-within:opacity-100 lg:group-hover:opacity-100"
        data-size="icon"
        data-testid="edit-feed-feed-active"
        data-variant="ghost"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-pencil size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
          <path
            d="m15 5 4 4"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    data-testid="custom-feed-dialog-create"
  >
    <button
      class="flex min-h-12 w-full min-w-40 cursor-pointer items-center gap-x-2 border-b border-border text-muted-foreground transition-colors hover:text-white lg:justify-center"
      data-override-defaults="true"
      data-testid="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-plus size-5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M8 12h8"
        />
        <path
          d="M12 8v8"
        />
      </svg>
      <span
        class="font-medium lg:text-sm"
        data-override-defaults="true"
        data-testid="typography"
      >
        Create Feed
      </span>
    </button>
  </div>
</div>
`;

exports[`FeedNavigation - Snapshots > matches snapshot with custom feeds and Home active 1`] = `
<div
  class="overflow-x-auto lg:flex-row"
  data-testid="container"
>
  <div
    class="mb-2 font-light text-muted-foreground lg:hidden"
    data-level="2"
    data-size="lg"
    data-testid="heading"
  >
    Feed
  </div>
  <a
    aria-current="page"
    class="flex min-h-12 w-full min-w-40 items-center gap-x-2 border-b transition-colors hover:text-white lg:justify-center border-white text-white"
    data-override-defaults="true"
    data-testid="link"
    href="/home"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-house size-5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
      />
      <path
        d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
      />
    </svg>
    <span
      class="font-medium lg:text-sm"
      data-override-defaults="true"
      data-testid="typography"
    >
      Home
    </span>
  </a>
  <div
    class="group relative flex w-full min-w-40 text-muted-foreground"
    data-testid="custom-feed-tab"
  >
    <a
      class="flex min-h-12 w-full min-w-40 items-center gap-x-2 border-b pr-12 transition-colors hover:text-white lg:justify-center lg:pl-12 border-border text-muted-foreground"
      data-override-defaults="true"
      data-testid="link"
      href="/feed/feed-1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-activity size-5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
        />
      </svg>
      <span
        class="truncate font-medium lg:text-sm"
        data-override-defaults="true"
        data-testid="typography"
      >
        Bitcoin News
      </span>
    </a>
    <div
      data-feed-id="feed-1"
      data-testid="custom-feed-dialog-edit"
    >
      <button
        aria-label="Edit Bitcoin News"
        class="absolute top-1/2 right-2 z-10 size-8 -translate-y-1/2 opacity-100 transition-opacity focus-visible:opacity-100 lg:opacity-0 lg:group-focus-within:opacity-100 lg:group-hover:opacity-100"
        data-size="icon"
        data-testid="edit-feed-feed-1"
        data-variant="ghost"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-pencil size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
          <path
            d="m15 5 4 4"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="group relative flex w-full min-w-40 text-muted-foreground"
    data-testid="custom-feed-tab"
  >
    <a
      class="flex min-h-12 w-full min-w-40 items-center gap-x-2 border-b pr-12 transition-colors hover:text-white lg:justify-center lg:pl-12 border-border text-muted-foreground"
      data-override-defaults="true"
      data-testid="link"
      href="/feed/feed-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-activity size-5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
        />
      </svg>
      <span
        class="truncate font-medium lg:text-sm"
        data-override-defaults="true"
        data-testid="typography"
      >
        Lightning Network
      </span>
    </a>
    <div
      data-feed-id="feed-2"
      data-testid="custom-feed-dialog-edit"
    >
      <button
        aria-label="Edit Lightning Network"
        class="absolute top-1/2 right-2 z-10 size-8 -translate-y-1/2 opacity-100 transition-opacity focus-visible:opacity-100 lg:opacity-0 lg:group-focus-within:opacity-100 lg:group-hover:opacity-100"
        data-size="icon"
        data-testid="edit-feed-feed-2"
        data-variant="ghost"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-pencil size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
          <path
            d="m15 5 4 4"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    data-testid="custom-feed-dialog-create"
  >
    <button
      class="flex min-h-12 w-full min-w-40 cursor-pointer items-center gap-x-2 border-b border-border text-muted-foreground transition-colors hover:text-white lg:justify-center"
      data-override-defaults="true"
      data-testid="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-plus size-5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M8 12h8"
        />
        <path
          d="M12 8v8"
        />
      </svg>
      <span
        class="font-medium lg:text-sm"
        data-override-defaults="true"
        data-testid="typography"
      >
        Create Feed
      </span>
    </button>
  </div>
</div>
`;

exports[`FeedNavigation - Snapshots > matches snapshot with multiple custom feeds and one active 1`] = `
<div
  class="overflow-x-auto lg:flex-row"
  data-testid="container"
>
  <div
    class="mb-2 font-light text-muted-foreground lg:hidden"
    data-level="2"
    data-size="lg"
    data-testid="heading"
  >
    Feed
  </div>
  <a
    class="flex min-h-12 w-full min-w-40 items-center gap-x-2 border-b transition-colors hover:text-white lg:justify-center border-border text-muted-foreground"
    data-override-defaults="true"
    data-testid="link"
    href="/home"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-house size-5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
      />
      <path
        d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
      />
    </svg>
    <span
      class="font-medium lg:text-sm"
      data-override-defaults="true"
      data-testid="typography"
    >
      Home
    </span>
  </a>
  <div
    class="group relative flex w-full min-w-40 text-muted-foreground"
    data-testid="custom-feed-tab"
  >
    <a
      class="flex min-h-12 w-full min-w-40 items-center gap-x-2 border-b pr-12 transition-colors hover:text-white lg:justify-center lg:pl-12 border-border text-muted-foreground"
      data-override-defaults="true"
      data-testid="link"
      href="/feed/feed-1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-activity size-5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
        />
      </svg>
      <span
        class="truncate font-medium lg:text-sm"
        data-override-defaults="true"
        data-testid="typography"
      >
        Bitcoin
      </span>
    </a>
    <div
      data-feed-id="feed-1"
      data-testid="custom-feed-dialog-edit"
    >
      <button
        aria-label="Edit Bitcoin"
        class="absolute top-1/2 right-2 z-10 size-8 -translate-y-1/2 opacity-100 transition-opacity focus-visible:opacity-100 lg:opacity-0 lg:group-focus-within:opacity-100 lg:group-hover:opacity-100"
        data-size="icon"
        data-testid="edit-feed-feed-1"
        data-variant="ghost"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-pencil size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
          <path
            d="m15 5 4 4"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="group relative flex w-full min-w-40 text-white"
    data-testid="custom-feed-tab"
  >
    <a
      aria-current="page"
      class="flex min-h-12 w-full min-w-40 items-center gap-x-2 border-b pr-12 transition-colors hover:text-white lg:justify-center lg:pl-12 border-white text-white"
      data-override-defaults="true"
      data-testid="link"
      href="/feed/feed-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-activity size-5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
        />
      </svg>
      <span
        class="truncate font-medium lg:text-sm"
        data-override-defaults="true"
        data-testid="typography"
      >
        Lightning
      </span>
    </a>
    <div
      data-feed-id="feed-2"
      data-testid="custom-feed-dialog-edit"
    >
      <button
        aria-label="Edit Lightning"
        class="absolute top-1/2 right-2 z-10 size-8 -translate-y-1/2 opacity-100 transition-opacity focus-visible:opacity-100 lg:opacity-0 lg:group-focus-within:opacity-100 lg:group-hover:opacity-100"
        data-size="icon"
        data-testid="edit-feed-feed-2"
        data-variant="ghost"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-pencil size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
          <path
            d="m15 5 4 4"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="group relative flex w-full min-w-40 text-muted-foreground"
    data-testid="custom-feed-tab"
  >
    <a
      class="flex min-h-12 w-full min-w-40 items-center gap-x-2 border-b pr-12 transition-colors hover:text-white lg:justify-center lg:pl-12 border-border text-muted-foreground"
      data-override-defaults="true"
      data-testid="link"
      href="/feed/feed-3"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-activity size-5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
        />
      </svg>
      <span
        class="truncate font-medium lg:text-sm"
        data-override-defaults="true"
        data-testid="typography"
      >
        Nostr
      </span>
    </a>
    <div
      data-feed-id="feed-3"
      data-testid="custom-feed-dialog-edit"
    >
      <button
        aria-label="Edit Nostr"
        class="absolute top-1/2 right-2 z-10 size-8 -translate-y-1/2 opacity-100 transition-opacity focus-visible:opacity-100 lg:opacity-0 lg:group-focus-within:opacity-100 lg:group-hover:opacity-100"
        data-size="icon"
        data-testid="edit-feed-feed-3"
        data-variant="ghost"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-pencil size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
          <path
            d="m15 5 4 4"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    data-testid="custom-feed-dialog-create"
  >
    <button
      class="flex min-h-12 w-full min-w-40 cursor-pointer items-center gap-x-2 border-b border-border text-muted-foreground transition-colors hover:text-white lg:justify-center"
      data-override-defaults="true"
      data-testid="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-plus size-5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M8 12h8"
        />
        <path
          d="M12 8v8"
        />
      </svg>
      <span
        class="font-medium lg:text-sm"
        data-override-defaults="true"
        data-testid="typography"
      >
        Create Feed
      </span>
    </button>
  </div>
</div>
`;

exports[`FeedNavigation - Snapshots > matches snapshot with no custom feeds and Home active 1`] = `
<div
  class="overflow-x-auto lg:flex-row"
  data-testid="container"
>
  <div
    class="mb-2 font-light text-muted-foreground lg:hidden"
    data-level="2"
    data-size="lg"
    data-testid="heading"
  >
    Feed
  </div>
  <a
    aria-current="page"
    class="flex min-h-12 w-full min-w-40 items-center gap-x-2 border-b transition-colors hover:text-white lg:justify-center border-white text-white"
    data-override-defaults="true"
    data-testid="link"
    href="/home"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-house size-5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
      />
      <path
        d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
      />
    </svg>
    <span
      class="font-medium lg:text-sm"
      data-override-defaults="true"
      data-testid="typography"
    >
      Home
    </span>
  </a>
  <div
    data-testid="custom-feed-dialog-create"
  >
    <button
      class="flex min-h-12 w-full min-w-40 cursor-pointer items-center gap-x-2 border-b border-border text-muted-foreground transition-colors hover:text-white lg:justify-center"
      data-override-defaults="true"
      data-testid="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-plus size-5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M8 12h8"
        />
        <path
          d="M12 8v8"
        />
      </svg>
      <span
        class="font-medium lg:text-sm"
        data-override-defaults="true"
        data-testid="typography"
      >
        Create Feed
      </span>
    </button>
  </div>
</div>
`;
